@@ -1,7 +1,6 @@
 package com.heartForecast.domain.childRelation.presentation;
 
 import com.heartForecast.domain.child.presentation.dto.response.ChildResponse;
-import com.heartForecast.domain.childRelation.domain.ChildRelation;
 import com.heartForecast.domain.childRelation.presentation.dto.request.ChildRelationJoinRequest;
 import com.heartForecast.domain.childRelation.service.CommandChildRelationService;
 import com.heartForecast.domain.childRelation.service.QueryChildRelationService;
@@ -11,7 +10,6 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 
 import static com.heartForecast.common.jwt.util.AuthenticationUtil.getMemberId;
-import static java.util.stream.Collectors.toList;
 
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -34,16 +32,15 @@ public class ChildRelationController {
   @Operation(summary = "특정 아이 돌봄관계 조회", description = "아이 ID를 통해 해당 아이의 돌봄관계를 조회합니다.")
   @GetMapping("/{child-id}")
   public ChildResponse getChildRelation(@PathVariable("child-id") Long childId) {
-    ChildRelation relation = queryChildRelationService.readOne(childId, getMemberId());
-    return ChildResponse.from(relation.getChild());
+    return ChildResponse.from(queryChildRelationService.readOne(childId, getMemberId()));
   }
 
   @Operation(summary = "전체 돌봄관계 목록 조회", description = "현재 사용자의 모든 돌봄관계 목록을 조회합니다.")
   @GetMapping
   public List<ChildResponse> getChildRelations() {
     return queryChildRelationService.readAll(getMemberId()).stream()
-        .map(relation -> ChildResponse.from(relation.getChild()))
-        .collect(toList());
+        .map(ChildResponse::from)
+        .toList();
   }
 
   @Operation(summary = "돌봄관계 삭제", description = "아이 ID를 통해 돌봄관계를 삭제합니다.")
